server init; index file and profile model

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ node_modules/
 /client/.pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-/client/.env*
+.env*
 
 # vercel
 /client/.vercel
