--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -9,6 +9,7 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "resolveJsonModule": true,
+    "moduleResolution": "node",
     "paths": {
       "@/*": ["./src/*"]
     } 
