--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -13,7 +13,8 @@
     "experimentalDecorators": true,
     "paths": {
       "@/*": ["./src/*"]
-    } 
+    },
+    "types": ["node", "jest"]
   },
   "include": [
     "src/**/*.ts"
