setup and get all users tests

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,8 +11,10 @@
     "resolveJsonModule": true,
     "moduleResolution": "node",
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "#/*": ["./tests/*"]
     },
     "types": ["node", "@types/jest"]
   },
