--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --exec tsx src/index.ts",
-    "test": "jest --verbose"
+    "test": "jest --verbose",
+    "test:filter": "jest --verbose --testNamePattern"
   },
   "keywords": [],
   "author": "",
