--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "medmatch2",
+  "name": "medmatch",
   "version": "1.0.0",
   "scripts": {
     "dev": "concurrently -n client,server -c blue,green \"npm run dev --prefix client\" \"npm run dev --prefix server\""
